# Art-Autoshader

./: .gitmodules  Makefile  README.md  main.c
include/cglm/: quat.h
include/glad/: glad.h
include/nuklear/: nuklear_glfw_gl3.h
lib/: CMakeLists.txt  glad.c  where_i_got_them.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
new_myutility/: glfw_window.c  glfw_window.h  opengl_rbo_util.c  opengl_rbo_util.h  opengl_texture_util.c  opengl_texture_util.h  opengl_util.c  opengl_util.h
new_myutility/general/: debug.c  debug.h
new_myutility/opengl/: glfw_window.c  glfw_window.d  glfw_window.h  opengl_random_util.c  opengl_random_util.d  opengl_random_util.h  opengl_texture_util.d  opengl_util.d  opengl_util_arena.c  opengl_util_arena.d  opengl_util_arena.h
shaders/: basic.frag  brush.comp  cam_plane.frag  cam_plane.vert  cam_proj.frag  cam_proj.vert  ecam_hmap.vert  editor_view.vert  hmap.frag  hmap.vert  light_source.frag  light_source.vert  plane.vert  raytrace.cu
shaders/heighttracer/: heightmap_kernel.cu  heightmap_kernel.h  main.cu  shared_types.h
shaders/heighttracer/cpp/: raytracer_seq.cpp
shaders/heighttracer/cpp v2/: mainV2.cpp
shaders/heighttracer/cppv2/: CMakeLists.txt  mainV2.cpp
src/: Transform.c  Transform.h  editor.c  editor.h  gui.c  gui.d  gui.h  heighttracer_cpu.cpp  heighttracer_cpu.h  heighttracer_cuda.cu  heighttracer_cuda.cuh  intensity.cpp  intensity.h  light_sources.c  light_sources.h  transform.c  transform.h
visual_documentation/: new_editor_object.docx  ~$w_editor_object.docx
